--- a/retro/app.json
+++ b/retro/app.json
@@ -1,11 +1,11 @@
 {
   "expo": {
-    "name": "retro-wallet",
-    "slug": "retro-wallet",
+    "name": "retro",
+    "slug": "retro",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "retrowallet",
+    "scheme": "retro",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
